# palindrome

./: .gitignore  Makefile  README.md  palindrome.py  pyproject.toml
tests/: test_palindrome.py
